# PythonQwt

./: .coveragerc  .env.template  .gitignore  .hgignore  .hgtags  .isort.cfg  .pylintrc  .readthedocs.yaml  CHANGELOG  CHANGELOG.md  LICENSE  MANIFEST.in  PythonQwt-tests.desktop  README  README.md  ReallySimpleDemo.py  basic_test.bat  benchmark.py  boundingrect_benchmark.py  build.bat  build_and_upload.bat  build_chm.bat  build_dist.bat  build_doc.bat  build_doc_zip.bat  conftest.py  index.md  pyproject.toml  requirements.txt  run_test_launcher.bat  run_unattended_tests.bat  setup.py  simpledemo.py  take_screenshots.bat  test.py  upload.bat
.github/: copilot-instructions.md
.github/workflows/: build_deploy.yml  python-package-PyQt5.yml  python-package-PyQt6.yml  python-package-PySide6.yml  test-PyQt5.yml  test-PyQt6.yml  test-PySide6.yml
doc/: conf.py  index.rst  installation.rst  issue93_optimization_summary.md  overview.rst  plot_example.py  reference.rst  requirements.txt  symbol_path_example.py
doc/examples/: bode_demo.rst  bodedemo.rst  cartesian.rst  cartesian_demo.rst  cpu_plot.rst  cpudemo.rst  curve_benchmark.rst  curve_demo1.rst  curve_styles.rst  curvebenchmark1.rst  curvebenchmark2.rst  curvedemo1.rst  curvedemo2.rst  data.rst  data_demo.rst  error_bar.rst  errorbar.rst  event_filter_demo.rst  eventfilter.rst  histogram_demo.rst  image.rst  image_plot_demo.rst  index.rst  logcurve.rst  map_demo.rst  mapdemo.rst  multidemo.rst  really_simple_demo.rst  simple.rst  vertical.rst
doc/reference/: color_map.rst  graphic.rst  index.rst  interval.rst  legend.rst  legend_data.rst  legend_label.rst  plot.rst  plot_canvas.rst  plot_curve.rst  plot_directpainter.rst  plot_grid.rst  plot_histogram.rst  plot_layout.rst  plot_marker.rst  plot_renderer.rst  plot_series.rst  plot_seriesitem.rst  qtdesigner.rst  scale.rst  scale_div.rst  scale_draw.rst  scale_engine.rst  scale_widget.rst  series_data.rst  series_store.rst  symbol.rst  text.rst  text_engine.rst  toqimage.rst  transform.rst
examples/: BarPlotDemo.py  BodeDemo.py  CPUplot.py  CartesianDemo.py  CurveDemo1.py  CurveDemo2.py  CurveDemo3.py  DataDemo.py  ErrorBarDemo.py  EventFilterDemo.py  HistogramDemo.py  ImagePlotDemo.py  MapDemo.py  MaskedDataDemo.py  MultiDemo.py  PickerDemo.py  ReallySimpleDemo.py
qtdesigner/: qwtplugin.py
qwt/: __init__.py  _math.py  abstract_legend.py  clipper.py  color_map.py  column_symbol.py  curve_fitter.py  dyngrid_layout.py  graphic.py  interval.py  legend.py  legend_data.py  legend_label.py  math.py  null_paintdevice.py  painter.py  painter_command.py  pixel_matrix.py  plot.py  plot_canvas.py  plot_curve.py  plot_dict.py  plot_directpainter.py  plot_grid.py  plot_histogram.py  plot_intervalcurve.py  plot_item.py  plot_layout.py  plot_marker.py  plot_renderer.py  plot_series.py  plot_seriesitem.py  point_data.py  point_mapper.py  py3compat.py  qtdesigner.py  qthelpers.py  qwt_abstract_legend.py  qwt_clipper.py  qwt_color_map.py  (+52 more)
qwt/examples/: BodeDemo.py  CartesianDemo.py  CurveDemo1.py  CurveDemo2.py  HistogramDemo.py  MapDemo.py  MultiDemo.py
qwt/qt/: QtCore.py  QtGui.py  QtSvg.py  QtWebKit.py  __init__.py  compat.py
qwt/tests/: BodeDemo.py  CPUplot.py  CartesianDemo.py  CurveBenchmark.py  CurveDemo1.py  CurveDemo2.py  CurveStyles.py  DataDemo.py  ErrorBarDemo.py  EventFilterDemo.py  HistogramDemo.py  ImagePlotDemo.py  LogCurveDemo.py  MapDemo.py  MultiDemo.py  ReallySimpleDemo.py  __init__.py  bode.py  bodedemo.py  cartesian.py  comparative_benchmarks.py  conftest.py  cpudemo.py  curve_benchmark.py  curve_benchmark1.py  curve_benchmark2.py  curve_styles.py  curvebenchmark1.py  curvebenchmark2.py  curvedemo1.py  curvedemo2.py  curves1.py  curves2.py  data.py  errorbar.py  eventfilter.py  image.py  imageplot.py  loadtest.py  logcurve.py  (+36 more)
scripts/: PythonQwt-tests-py3  README.md  bench_gdi_loadtest.py  bench_plotpy_loadtest.py  bench_qt.ps1  build_and_upload.bat  build_dist.bat  build_doc.bat  build_upload.bat  capture_screenshots.py  clean_up.bat  diff_screenshots.py  func.bat  lineprofile_loadtest.py  preview_doc.bat  profile_loadtest.py  python-qwt-tests  run_coverage.bat  run_pylint.bat  run_pytest.bat  run_ruff.bat  run_test_coverage.bat  run_test_launcher.bat  run_test_venv.bat  run_unattended_tests.bat  run_with_env.py  take_screenshots.bat  take_screenshots.py  telemetry_fontcache.py  upload.bat  utils.bat
